integration with banquito

--- a/src/main/resources/templates/layouts/internt-layout.html
+++ b/src/main/resources/templates/layouts/internt-layout.html
@@ -8,7 +8,7 @@
 	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <meta name="description" content="" />
 <meta name="author" content="Dany Lasso" />
-<title th:text="'Los Chinitos'"></title>
+<title th:text="'Electrodomésticos'"></title>
 <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
 <!-- Font Awesome icons (free version)-->
 <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
@@ -30,6 +30,14 @@
 	crossorigin="anonymous">
 <link th:href="@{/css/styles.css}" rel="stylesheet" />
 <link th:href="@{/css/private-pages.css}" rel="stylesheet" />
+
+<style type="text/css">
+
+.ui-autocomplete{
+	z-index: 9999 !important;
+}
+</style>
+
 </head>
 <body>
 
