--- a/src/main/resources/static/css/private-pages.css
+++ b/src/main/resources/static/css/private-pages.css
@@ -98,3 +98,11 @@
     min-width: 150px;
     align-self: center;
 }
+
+.ui-autocomplete { 
+	z-index: 3000; 
+}
+
+.highlight{
+	z-index: 3000; 
+}
