--- a/src/main/resources/templates/store/detalle-factura.html
+++ b/src/main/resources/templates/store/detalle-factura.html
@@ -8,30 +8,57 @@
 	<br>
 	<br>
 	<br>
-	
-	<div class="alert alert-success" th:if="${success!=null}" th:text="${success}"></div>
-	<div class="alert alert-danger" th:if="${danger!=null}" th:text="${error}"></div>
-	<div class="alert alert-warning" th:if="${warning!=null}" th:text="${warning}"></div>
+
+	<div class="alert alert-success" th:if="${success!=null}"
+		th:text="${success}"></div>
+	<div class="alert alert-danger" th:if="${danger!=null}"
+		th:text="${error}"></div>
+	<div class="alert alert-warning" th:if="${warning!=null}"
+		th:text="${warning}"></div>
 	<div class="alert alert-info" th:if="${info!=null}" th:text="${info}"></div>
-	
+
 	<div class="container py-4">
 		<div class="card bg-light">
 			<div class="card-header" th:text="${titulo}"></div>
 			<div class="card-body">
 				<h4 class="card-title">
-					<a th:href="@{'/fact-cliente/'+${factura.customer.id_customer}}" class="btn btn-light btn-xs">&laquo; Volver</a>
-					<a class="btn btn-danger btn-xs float-right" th:href="@{'/factura/'+${factura.id_factura}(format=pdf)}">Exportar PDF</a>
+					<a th:href="@{'/fact-cliente/'+${factura.customer.id_customer}}"
+						class="btn btn-light btn-xs">&laquo; Volver</a> <input
+						class="btn btn-danger btn-xs float-right" type=button name=print
+						value="Imprimir Factura" onClick="window.print()" />
 				</h4>
-				<ul class="list-group my-2">
-					<li class="list-group-item list-group-item-primary" th:text="'Datos del cliente'"></li>
-					<li class="list-group-item" th:text="${factura.customer.names_customer} + ' ' + ${factura.customer.lastnames_customer}"></li>
-					<li class="list-group-item" th:text="${factura.customer.email_customer}"></li>
+
+				<ul class="list-group">
+					<li class="list-group-item list-group-item-success"
+						th:text="'Datos del Emisor'"></li>
+					<li class="list-group-item"
+						th:text="'Razón Social: Comercializadora Monster S.A.'"></li>
+					<li class="list-group-item" th:text="'RUC: 1768007390001'"></li>
+					<li class="list-group-item"
+						th:text="'Dirección:  Av. 12 de Octubre N26-97 y Abraham Lincoln'"></li>
+					<li class="list-group-item"
+						th:text="'Número de Factura: 001-001-0000000' + ${factura.id_factura}"></li>
+					<li class="list-group-item"
+						th:text="'Fecha de Emisión: ' + ${factura.emision_factura}"></li>
 				</ul>
 				<ul class="list-group">
-					<li class="list-group-item list-group-item-success" th:text="'Datos de la factura'"></li>
-					<li class="list-group-item" th:text="'Cod de Factura: ' + ${factura.id_factura}"></li>
-					<li class="list-group-item" th:text="'Descripcion: ' + ${factura.descripcion_factura}"></li>
-					<li class="list-group-item" th:text="'Fecha: ' + ${factura.emision_factura}"></li>
+					<li class="list-group-item list-group-item-info"
+						th:text="'Datos del Vendedor'"></li>
+					<li class="list-group-item"
+						th:text="'Nombre: ' + ${seller.names + ' ' + seller.lastnames}"></li>
+					<li class="list-group-item"
+						th:text="'Documento de Identificación: ' + ${seller.numDocument}"></li>
+					<li class="list-group-item" th:text="'Correo:  ' + ${seller.email}"></li>
+					<li class="list-group-item"
+						th:text="'Teléfono: ' + ${seller.phone}"></li>
+				</ul>
+				<ul class="list-group my-2">
+					<li class="list-group-item list-group-item-primary"
+						th:text="'Datos del cliente'"></li>
+					<li class="list-group-item"
+						th:text="${factura.customer.names_customer} + ' ' + ${factura.customer.lastnames_customer}"></li>
+					<li class="list-group-item"
+						th:text="${factura.customer.email_customer}"></li>
 				</ul>
 				<table class="table table-striped table-hover table-bordered my-3">
 					<thead>
@@ -49,11 +76,72 @@
 							<td th:text="${linea.product.price_product}"></td>
 							<td th:text="${linea.cantidad_item}"></td>
 							<td th:text="${linea.calcularImporte()}"></td>
-							<td style="width:100px"><img class="img-responsive float-right" style="width: 120%;" th:src="@{'/uploads/'+${linea.product.img_product}}" th:alt="${linea.product.img_product}"> </td>
+							<td style="width: 100px"><img
+								class="img-responsive float-right" style="width: 120%;"
+								th:src="@{'/uploads/'+${linea.product.img_product}}"
+								th:alt="${linea.product.img_product}"></td>
 						</tr>
 					</tbody>
 				</table>
-				<h5 class="float-right">Total de la Factura: <span th:text="${factura.total}" class="badge badge-secondary"></span></h5>
+				<div class="container">
+					<div class="row justify-content-md-center">
+						<div class="col-sm-6">
+							<div class="alert alert-info" role="alert">
+								Forma de Pago: <b
+									th:text="${factura.type_paid == '1'} ? 'Efectivo' : 'Crédito'"></b>
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div class="row ">
+								<div class="col-sm-6">
+									<h6>Subtotal:</h6>
+								</div>
+								<div class="col-sm-6">
+									<input type="number" class="form-control is-valid"
+										th:value="${subtotal}" disabled>
+								</div>
+								<div class="col-sm-6">
+									<h6>Decuento:</h6>
+								</div>
+								<div class="col-sm-6">
+									<input type="number" class="form-control is-valid"
+										th:value="${descuento}" disabled>
+								</div>
+								<div class="col-sm-6">
+									<h6>Total:</h6>
+								</div>
+								<div class="col-sm-6">
+									<input type="number" class="form-control is-valid"
+										th:value="${total}" disabled>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="container" th:if="${tableAmortization.size() > 0}">
+					<div class="row justify-content-md-center">
+						<table class="table table-striped table-hover table-bordered my-3">
+							<thead>
+								<tr>
+									<th scope="col"># Cuota</th>
+									<th scope="col">Valor Cuota</th>
+									<th scope="col">Interés Pagado</th>
+									<th scope="col">Capital Pagado</th>
+									<th scope="col">Saldo</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="cuota: ${tableAmortization}">
+									<td th:text="${cuota.index}"></td>
+									<td th:text="${cuota.valueFee}"></td>
+									<td th:text="${cuota.interestPaid}"></td>
+									<td th:text="${cuota.capitalPaid}"></td>
+									<td th:text="${cuota.balance}"></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
