--- a/src/main/resources/templates/store/factura-cliente.html
+++ b/src/main/resources/templates/store/factura-cliente.html
@@ -25,8 +25,8 @@
 					<table th:if="${not #lists.isEmpty(customer.facturas)}" class="table table-bordered tabled striped my-4">
 						<thead class="thead-dark">
 							<tr>
-								<th>Cod Factura</th>
-								<th>Descripción</th>
+								
+								<th>Numeración</th>
 								<th>Fecha</th>
 								<th>Total</th>
 								<th>Detalles</th>
@@ -34,8 +34,7 @@
 						</thead>
 						<tbody>
 							<tr th:each="factura: ${customer.facturas}">
-								<td th:text="${factura.id_factura}"></td>
-								<td th:text="${factura.descripcion_factura}"></td>
+								<td th:text="${'001-001-0000000'  + factura.id_factura}"></td>
 								<td th:text="${factura.emision_factura}"></td>
 								<td th:text="${factura.total}"></td>
 								<td><a class="btn btn-primary btn-xs" th:href="@{'/factura/'+${factura.id_factura}}"><i class="fa fa-list-ul" aria-hidden="true"></i></a></td>
