--- a/src/main/resources/templates/store/js/autocomplete-cliente.html
+++ b/src/main/resources/templates/store/js/autocomplete-cliente.html
@@ -8,20 +8,19 @@
 			$("#buscar_cliente").autocomplete({
 				source: function(request,response){
 					$.ajax({
-						url:"/cargar-cliente/" + request.term,
+						url:"https://espe-2021-banquito.herokuapp.com/api/v1/clients?searchParameter=" + request.term,
 						dataType: "json",
-						data: {
-							term: request.term
-						},
 						success: function(data){
 							response($.map(data, function(item){
 								return{
-									value: item.document_customer,
-									label: item.names_customer + " " +item.lastnames_customer,
-									correo: item.email_customer,
-									telefono: item.phone_customer,
-									address: item.address_customer,
-									code: item.id_customer,
+									value: item.id,
+									label: item.name + " " +item.lastname + " ( identificación: " + item.numIdentification + ", correo:" + item.email +   ")",
+									correo: item.email,
+									telefono: "0985118730",
+									address: "Av. Siempre Vive",
+									code: item.id,
+									identification: item.numIdentification,
+									names: item.name + " " +item.lastname
 								};
 						}));
 					},
@@ -29,10 +28,11 @@
 			},
 			select: function(event,ui){
 				$("#buscar_cliente").val(ui.item.label);
-				
-				$("#customer").val(ui.item.code);
-				$("#names_costumer").val(ui.item.label);
-				$("#document_costumer").val(ui.item.value);
+				console.log(ui.item.code)
+				 document.getElementById("customerId").value = ui.item.code
+				$("#customerId").val(ui.item.code);
+				$("#names_costumer").val(ui.item.names);
+				$("#document_costumer").val(ui.item.identification);
 				$("#email_costumer").val(ui.item.correo);
 				$("#phone_costumer").val(ui.item.telefono);
 				$("#address_costumer").val(ui.item.address);
